@@ -23,7 +23,7 @@ public class Main<T> {
     static public LinkedList<Integer> splitInAFirstList(LinkedList<Integer> list){
         LinkedList<Integer> list1 = new LinkedList<>();
 
-        for (int i = 0; i < (list.size() / 2)-1; i++) {
+        for (int i = 0; i < list.size() / 2; i++) {
             list1.add(list.get(i));
         }
         return list1;
@@ -42,14 +42,26 @@ public class Main<T> {
 
     static public LinkedList<Integer> mergeTwoLists(LinkedList<Integer> list1, LinkedList<Integer> list2){
         LinkedList<Integer> newList = new LinkedList<>();
-        while (list1.size() > 1 || list2.size() > 1) {
-            if (list1.getFirst() < list2.getFirst()) {
-                newList.add(list1.getFirst());
-                list1.remove(list1.getFirst());
+
+        for(int i = 0; i < list1.size()-1; i++) {
+            if(list1.get(i) > list1.get(i+1)){
+
             }
-            else {
-                newList.add(list2.getFirst());
-                list2.remove(list2.getFirst());
+        }
+
+        int min = list1.get(0);
+        for(int i = 0; i < list1.size()-1; i++){
+            for(int j = 0; j < list2.size()-1; j++){
+                if(list1.get(i) < min) {
+                    newList.add(list1.get(i));
+                    min = list1.get(i);
+                    list1.remove(list1.get(i));
+                }
+                else if(list2.get(j) < min){
+                    newList.add(list2.get(j));
+                    min = list2.get(j);
+                    list2.remove(list2.get(j));
+                }
             }
         }
         return newList;
@@ -139,11 +151,14 @@ public class Main<T> {
 
         LinkedList<Integer> listAfterSort = new LinkedList<Integer>();
 
-        /*System.out.println("Liste avant le tri :");
-        System.out.println(sequence.list.toString());
-        System.out.println("La taille de la liste est " + sequence.getSizeOf());
-
-        System.out.println("\n"); */
+        System.out.println(linkedList.toString());
+        LinkedList<Integer> listA = splitInAFirstList(linkedList);
+        System.out.println(listA.toString());
+        LinkedList<Integer> listB = splitInASecondList(linkedList);
+        System.out.println(listB.toString());
+        LinkedList<Integer> mergedLists = new LinkedList<Integer>();
+        mergedLists = mergeTwoLists(listA, listB);
+        System.out.println(mergedLists.toString());
 
         Scanner sc = new Scanner(System.in);
         System.out.println("Choisissez le tri à effectuer :\n 1) Tri à bulles\n 2) Tri par fusion\n 3) Tri rapide (avec la partition dite du drapeau)\n 4) Tri par tas\n 5) Tri par base\n");
